# kailash-coc-claude-rs

./: .coc-sync-marker  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Gemfile  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: .coc-obsoleted  .coc-sync-marker  VERSION  settings.json
.claude/agents/: README.md  _README.md  _subagent-guide.md  build-fix.md  cli-orchestrator.md  codex-architect.md  deep-analyst.md  deployment-specialist.md  documentation-validator.md  e2e-runner.md  framework-advisor.md  gemini-architect.md  gold-standards-validator.md  intermediate-reviewer.md  open-source-strategist.md  pattern-expert.md  requirements-analyst.md  sdk-navigator.md  security-reviewer.md  tdd-implementer.md  testing-specialist.md  value-auditor.md
.claude/agents/frameworks/: align-specialist.md  dataflow-specialist.md  kaizen-specialist.md  mcp-specialist.md  ml-specialist.md  nexus-specialist.md  pact-specialist.md  trust-plane-specialist.md
.claude/agents/frontend/: ai-ux-designer.md  flutter-specialist.md  frontend-developer.md  react-specialist.md  uiux-designer.md
.claude/agents/management/: gh-manager.md  git-release-specialist.md  todo-manager.md
.claude/agents/standards/: care-expert.md  co-expert.md  coc-expert.md  eatp-expert.md
.claude/commands/: ai.md  analyze.md  api.md  cc-audit.md  codify.md  db.md  deploy.md  i-audit.md  i-harden.md  implement.md  redteam.md  release.md  sdk.md  sync.md  test.md  todos.md  validate.md  wrapup.md  ws.md
.claude/guides/claude-code/: 00-working-with-claude-code.md  03-installation-and-first-run.md  04-the-command-system.md  06-the-skill-system.md  08-the-rule-system.md  10-daily-workflows.md  12-troubleshooting.md  CLAUDE.md  README.md
.claude/guides/co-setup/: 02-project-types.md  04-propagation.md
.claude/guides/model-optimization/: 04-implementation-plan.md  README.md
.claude/guides/rule-extracts/: agents.md  repo-scope-discipline.md
.claude/rules/: agent-reasoning.md  agents.md  branch-protection.md  build-speed.md  connection-pool.md  dataflow-pool.md  dependencies.md  deployment.md  e2e-god-mode.md  eatp.md  env-models.md  evidence-first-claims.md  framework-first.md  git.md  independence.md  infrastructure-sql.md  nexus-http-status-convention.md  nexus-webhook-hmac.md  no-stubs.md  observability.md  orphan-detection.md  pact-governance.md  patterns.md  python-environment.md  repo-scope-discipline.md  schema-migration.md  security.md  tenant-isolation.md  terrene-naming.md  testing.md  trust-plane-security.md  zero-tolerance.md
.claude/skills/01-core/: SKILL.md  add-node.md  configure-alerts.md  enterprise-infrastructure.md  run-benchmarks.md  runtime-execution.md  serialize-workflow.md  test-workflow.md  value-type-guide.md
.claude/skills/01-core-sdk/: SKILL.md  add-node.md  async-pythoncode-patterns.md  async-workflow-patterns.md  configure-alerts.md  connection-patterns.md  core-events-visualization.md  custom-node-guide.md  enterprise-infrastructure.md  error-handling-patterns.md  kailash-imports.md  kailash-installation.md  mcp-integration-guide.md  node-patterns-common.md  param-passing-quick.md  pythoncode-best-practices.md  run-benchmarks.md  runtime-execution.md  runtime-lifecycle.md  serialize-workflow.md  switchnode-patterns.md  test-workflow.md  value-type-guide.md  workflow-quickstart.md
.claude/skills/02-dataflow/: SKILL.md  dataflow-advanced-patterns.md  dataflow-aggregation.md  dataflow-async-lifecycle.md  dataflow-bulk-operations.md  dataflow-cli-commands.md  dataflow-compliance.md  dataflow-connection-config.md  dataflow-connection-isolation.md  dataflow-count-node.md  dataflow-crud-operations.md  dataflow-crud-patterns.md  dataflow-custom-nodes.md  dataflow-debug-agent.md  dataflow-deployment.md  dataflow-dialects.md  dataflow-dynamic-updates.md  dataflow-error-enhancer.md  dataflow-existing-database.md  dataflow-express.md  dataflow-gotchas.md  dataflow-installation.md  dataflow-migrations-quick.md  dataflow-ml-integration.md  dataflow-models.md  dataflow-monitoring.md  dataflow-multi-instance.md  dataflow-multi-tenancy.md  dataflow-native-arrays.md  dataflow-nexus-integration.md  dataflow-performance.md  dataflow-queries.md  dataflow-quickstart.md  dataflow-result-access.md  dataflow-schema-cache.md  dataflow-tdd-api.md  dataflow-tdd-best-practices.md  dataflow-tdd-mode.md  dataflow-transactions.md  dataflow-troubleshooting.md  (+1 more)
.claude/skills/03-nexus/: README.md  SKILL.md  codegen-decision-tree.md  create-mcp-server.md  golden-patterns-catalog.md  nexus-agent-reference.md  nexus-agentui.md  nexus-api-input-mapping.md  nexus-api-patterns.md  nexus-architecture.md  nexus-auth-plugin.md  nexus-cli-patterns.md  nexus-comparison.md  nexus-config-options.md  nexus-dataflow-integration.md  nexus-enterprise-features.md  nexus-event-system.md  (+15 more)
.github/: coc-sdk-refs-allowlist.txt
.github/workflows/: auto-merge.yml  validate.yml
docs/00-authority/: FEATURE-GAPS.md
scripts/hooks/: auto-format.js  detect-package-manager.js  log-triage-gate.js  pre-compact.js  session-end.js  session-start.js  user-prompt-rules-reminder.js  validate-workflow.js
scripts/learning/: instinct-evolver.js
scripts/plugin/: build-plugin.js
spec/: spec_helper.rb
tests/sdk/: test_sdk_patterns.py
workspaces/: CLAUDE.md  README.md
(+321 files in other folders)
